Fix text wrapping for long messages

--- a/css/messages.css
+++ b/css/messages.css
@@ -208,8 +208,8 @@ header {
     padding: 0.5rem 0;
     border-radius: 1rem;
     max-width: 70%;
-    overflow-wrap: break-word;
-    word-break: break-word;
+    overflow-wrap: anywhere;
+    word-break: break-all;
 }
 
 .message-me {
